<resources>
    <string name="app_name">QuizApp</string>
    <string name="correct">CORRECT!</string>
    <string name="incorrect">INCORRECT!</string>
    <string name="answer_again">Answer Again</string>
    <string name="check_answers">Check Answers</string>
    <string name="answer_F">Among the most consumed peppers in Brazil are: Pink Pepper, Black Pepper, Jiquita baniwa, Chili Pepper, Tabasco, Syrian Pepper, Cumari, Finger, Chipotle, Malagueta</string>
    <string name="option_F10">Malagueta</string>
    <string name="option_F9">Chipotle</string>
    <string name="option_F8">Finger</string>
    <string name="option_F7">Cumari</string>
    <string name="option_F6">Syrian Pepper</string>
    <string name="option_F5">Tabasco</string>
    <string name="option_F4">Chili Pepper</string>
    <string name="option_F3">Jiquita baniwa</string>
    <string name="option_F2">Black Pepper</string>
    <string name="option_F1">Pink Pepper</string>
    <string name="question_F">F: Name one pepper that is part of the 10 most consumed in Brazil:</string>
    <string name="answer_E">The relationship of pepper to ulcers and hemorrhoids does not involve causes, but rather aggravation of problems. Those who have external hemorrhoids, for example, which make the skin baked or injured by moisture, feels more ardor when evacuated after eating very spicy foods, but the problem is not aggravated by the pepper. The passage of the same through the anal canal is the only moment of discomfort, but does not pose a risk of worsening your hemorrhoids.</string>
    <string name="option_E4">None of the alternatives</string>
    <string name="option_E3">Ulcers and hemorrhoids</string>
    <string name="option_E2">Hemorrhoids</string>
    <string name="option_E1">Ulcers</string>
    <string name="question_E">E: Which of the following can be caused by the consumption of pepper?</string>
    <string name="answer_D">There is no record that pepper consumption boosts fertility, but pepper brings several benefits: It helps to lose weight, fights cancer, is good for the heart, good for teeth, protects the stomach, relieves headaches, helps in digestion...</string>
    <string name="option_D4">Headache relief</string>
    <string name="option_D3">Digestion aid</string>
    <string name="option_D2">Fighting Cancer</string>
    <string name="option_D1">Increased fertility</string>
    <string name="question_D">D: Of the items to follow, which is NOT one of the benefits brought by the consumption of chili pepper?</string>
    <string name="answer_C">The brain interprets the burning of the pepper as if the tongue had been burned and causes the opioid receptors of the central nervous system to produce endorphin, responsible for the sense of well-being.</string>
    <string name="option_C4">Serotonin</string>
    <string name="option_C3">Endorphin</string>
    <string name="option_C2">Noradrenaline</string>
    <string name="option_C1">Dopamine</string>
    <string name="question_C">C: What substance is produced by the central nervous system when the pepper comes in contact with the tongue?</string>
    <string name="answer_B">The myth that the seed of pepper is the one responsible for the ardence is spread to this day, but the great truth is that the substance that brings this "spice" to the plant is capsaicin. This substance is produced by glands located in the placenta of the fruits, that is, where the seeds are. Peppers produce this substance as a form of defense against bacteria and fungi that feed on it.</string>
    <string name="option_B4">In the skin</string>
    <string name="option_B3">Inside the seeds</string>
    <string name="option_B2">Where the seeds are</string>
    <string name="option_B1">In the pulp</string>
    <string name="question_B">B: Where is the substance responsible for pepper blight produced?</string>
    <string name="answer_A">According to the Scoville Heat Units, which is used to measure the blazing degree of peppers, Pepper X is currently the most burned in the world with 3,018,000 SHU, followed by Carolina Reaper with 2.200.000 SHU. For you to have as base the chilli pepper has a pungency of 60,000 to 100,000 SHU and the pepper girl finger has a pungency of 5,000 to 15,000 SHU.</string>
    <string name="option_A4">Pepper X</string>
    <string name="option_A3">Trinidad Moruga Scorpion</string>
    <string name="option_A2">Carolina Reaper</string>
    <string name="option_A1">Halapeno</string>
    <string name="question_A">A: What are the two most hottest pepper in the world?</string>
    <string name="pepper_quiz">Pepper Quiz!</string>
    <string name="pepper_image">Pepper Image</string>
    <string name="grade">You have %s right</string>
    <string name="answer">Answer</string>
</resources>
